2011-04-11  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by James Robinson.

        Adding a test which verifies that compositing image layers
        update correctly when their contents change.
        https://bugs.webkit.org/show_bug.cgi?id=58181

        * compositing/images/content-image-change-expected.txt: Added.
        * compositing/images/content-image-change.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/mac/compositing/images/content-image-change-expected.checksum: Added.
        * platform/mac/compositing/images/content-image-change-expected.png: Added.
2011-04-11  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by James Robinson.

        [chromium] Properly invalidate the contents of ImageLayerChromium's
        when the actual image contents change.
        https://bugs.webkit.org/show_bug.cgi?id=58181

        Test: compositing/images/content-image-change.html

        * platform/graphics/chromium/ContentLayerChromium.cpp:
        (WebCore::ContentLayerChromium::updateTexture):
        * platform/graphics/chromium/ImageLayerChromium.cpp:
        (WebCore::ImageLayerChromium::ImageLayerChromium):
        (WebCore::ImageLayerChromium::setContents):
        (WebCore::ImageLayerChromium::paintContentsIfDirty):
        * platform/graphics/chromium/ImageLayerChromium.h:

Canonical link: https://commits.webkit.org/73318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83558 268f45cc-cd09-0410-ab3c-d52691b4dbfc